# bacteria

./: .gitattributes  Makefile  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
src/: Makefile  Makefile.am  Makefile.in  async_serv.c  async_serv.h  cryptocoins.c  cryptocoins.h  cryptocoins.ini  macros.h  main.c  signal_handler.c  signal_handler.h
src/.deps/: async_serv.Po  cryptocoins.Po  json_rpc.Po  main.Po  signal_handler.Po
